--- a/00857114-LAB1.html
+++ b/00857114-LAB1.html
@@ -180,13 +180,12 @@
                 <span class="phone">Phone: </span>
                 <span class="phone-val">0909203661</span>
             </div>
-
             <div>
                 <img src="images.jpg" width="60%">
             </div>
 
             <div class="about">
-                <span class="position">Front-End Developer </span>
+                <span class="position">Nothing </span>
                 <span class="desc">
                     A
                 </span>
@@ -198,27 +197,26 @@
                 <div class="section__list">
                     <div class="section__list-item">
                         <div class="left">
-                            <div class="name">KlowdBox</div>
-                            <div class="addr">San Fr, CA</div>
-                            <div class="duration">Jan 2011 - Feb 2015</div>
+                            <div class="name">GOD</div>
+                            <div class="addr">Sun</div>
+                            <div class="duration">about Jan -4,569,997,980 - now</div>
                         </div>
                         <div class="right">
-                            <div class="name">Fr developer</div>
-                            <div class="desc">did This and that</div>
+                            <div class="name">SUNGOD</div>
+                            <div class="desc">Sleep and eat</div>
                         </div>
                     </div>
                     <div class="section__list-item">
                         <div class="left">
-                            <div class="name">Akount</div>
-                            <div class="addr">San Monica, CA</div>
-                            <div class="duration">Jan 2011 - Feb 2015</div>
+                            <div class="name">HA KA man</div>
+                            <div class="addr">Everywhere</div>
+                            <div class="duration">Everytime</div>
                         </div>
                         <div class="right">
-                            <div class="name">Fr developer</div>
-                            <div class="desc">did This and that</div>
+                            <div class="name">Life hacker</div>
+                            <div class="desc">save money</div>
                         </div>
                     </div>
-
                 </div>
             </div>
             <div class="section">
@@ -226,46 +224,23 @@
                 <div class="section__list">
                     <div class="section__list-item">
                         <div class="left">
-                            <div class="name">Sample Institute of technology</div>
-                            <div class="addr">San Fr, CA</div>
-                            <div class="duration">Jan 2011 - Feb 2015</div>
+                            <div class="name">Information Engineering</div>
+                            <div class="addr">NTOU</div>
+                            <div class="duration">Still Struggling</div>
                         </div>
                         <div class="right">
-                            <div class="name">Fr developer</div>
-                            <div class="desc">did This and that</div>
+                            <div class="name">Poor Student</div>
+                            <div class="desc">did Nothing</div>
                         </div>
                     </div>
-                    <div class="section__list-item">
-                        <div class="left">
-                            <div class="name">Akount</div>
-                            <div class="addr">San Monica, CA</div>
-                            <div class="duration">Jan 2011 - Feb 2015</div>
-                        </div>
-                        <div class="right">
-                            <div class="name">Fr developer</div>
-                            <div class="desc">did This and that</div>
-                        </div>
-                    </div>
-
                 </div>
-
             </div>
             <div class="section">
                 <div class="section__title">Projects</div>
                 <div class="section__list">
                     <div class="section__list-item">
-                        <div class="name">DSP</div>
-                        <div class="text">I am a front-end developer with more than 3 years of experience writing html,
-                            css, and js. I'm motivated, result-focused and seeking a successful team-oriented company
-                            with opportunity to grow.</div>
-                    </div>
-
-                    <div class="section__list-item">
-                        <div class="name">DSP</div>
-                        <div class="text">I am a front-end developer with more than 3 years of experience writing html,
-                            css, and js. I'm motivated, result-focused and seeking a successful team-oriented company
-                            with opportunity to grow. <a href="/login">link</a>
-                        </div>
+                        <div class="name">Shark</div>
+                        <div class="text">MineEnglishesBed and I don't know what I should write here.</div>
                     </div>
                 </div>
             </div>
@@ -280,19 +255,15 @@
                         </div>
                         <div class="right">
                             <input id="ck1" type="checkbox" checked />
-
                             <label for="ck1"></label>
-                            <input id="ck2" type="checkbox" checked />
-
+                            <input id="ck2" type="checkbox" />
                             <label for="ck2"></label>
                             <input id="ck3" type="checkbox" />
-
                             <label for="ck3"></label>
                             <input id="ck4" type="checkbox" />
                             <label for="ck4"></label>
                             <input id="ck5" type="checkbox" />
                             <label for="ck5"></label>
-
                         </div>
                     </div>
 
@@ -303,23 +274,54 @@
                             CSS</div>
                     </div>
                     <div class="right">
-                        <input id="ck1" type="checkbox" checked />
-
-                        <label for="ck1"></label>
-                        <input id="ck2" type="checkbox" checked />
-
-                        <label for="ck2"></label>
-                        <input id="ck3" type="checkbox" />
-
-                        <label for="ck3"></label>
-                        <input id="ck4" type="checkbox" />
-                        <label for="ck4"></label>
-                        <input id="ck5" type="checkbox" />
-                        <label for="ck5"></label>
-
+                        <input id="ckk1" type="checkbox" checked />
+                        <label for="ckk1"></label>
+                        <input id="ckk2" type="checkbox" />
+                        <label for="ckk2"></label>
+                        <input id="ckk3" type="checkbox" />
+                        <label for="ckk3"></label>
+                        <input id="ckk4" type="checkbox" />
+                        <label for="ckk4"></label>
+                        <input id="ckk5" type="checkbox" />
+                        <label for="ckk5"></label>
                     </div>
                 </div>
-
+				<div class="skills__item">
+                    <div class="left">
+                        <div class="name">
+                            C++ and C</div>
+                    </div>
+                    <div class="right">
+                        <input id="ckkk1" type="checkbox" checked />
+                        <label for="ckkk1"></label>
+                        <input id="ckkk2" type="checkbox" checked/>
+                        <label for="ckkk2"></label>
+                        <input id="ckkk3" type="checkbox" />
+                        <label for="ckkk3"></label>
+                        <input id="ckkk4" type="checkbox" />
+                        <label for="ckkk4"></label>
+                        <input id="ckkk5" type="checkbox" />
+                        <label for="ckkk5"></label>
+                    </div>
+                </div>
+				<div class="skills__item">
+                    <div class="left">
+                        <div class="name">
+                            Python</div>
+                    </div>
+                    <div class="right">
+                        <input id="ckk1" type="checkbox" checked />
+                        <label for="ckk1"></label>
+                        <input id="ckk2" type="checkbox" />
+                        <label for="ckk2"></label>
+                        <input id="ckk3" type="checkbox" />
+                        <label for="ckk3"></label>
+                        <input id="ckk4" type="checkbox" />
+                        <label for="ckk4"></label>
+                        <input id="ckk5" type="checkbox" />
+                        <label for="ckk5"></label>
+                    </div>
+                </div>
             </div>
             <div class="section">
                 <div class="section__title">
@@ -327,7 +329,7 @@
                 </div>
                 <div class="section__list">
                     <div class="section__list-item">
-                        Football, programming.
+                        Pin-pon ,Piano ,get <span style ="color:green"> AC </span> from Zero-Judge or UVA or Codeforce etc.
                     </div>
                 </div>
             </div>
